# humming-bird-

./: .gitignore  README.md  pyproject.toml
hbp100/: __init__.py  cm.py  pyproject.toml
hbp100/pield/: __init__.py  core.py  detector.py  masker.py  patterns.py  reasoner.py
hbp100/pridel/: model_benchmark.txt.txt
hbp100/pridel/model/: pridel.pkl
hbp100/prield/: _init_.py  core.py  detector.py  masker.py  patterns.py  pyproject.toml  schemas.py
hbp100/test/: test.py
