[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "hbp100"
version = "0.1.5"
description = "Ultra-light privacy firewall for LLM prompts"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Dipanjan Dutta", email = "relic.of.sky@gmail.com"}
]
keywords = ["privacy", "firewall", "nlp", "ml", "pii"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Text Processing",
]

dependencies = [
    "joblib>=0.1.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Repository = "https://github.com/Xpheonix0/humming-bird-/"

[tool.setuptools.packages.find]
include = ["hbp100*"]

[tool.setuptools.package-data]
"hbp100.pridel.model" = ["*.pkl"]
