[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hbp100"
version = "0.1.0"
description = "Ultra-light privacy firewall for LLM prompts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Dipanjan Dutta", email = "relic.of.sky@gmail.com.com"}
]
keywords = ["privacy", "firewall", "nlp", "ml", "pii"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Text Processing",
]

dependencies = [
    "joblib>=1.2.0",
]

[project.urls]
Repository = "https://github.com/Xpheonix0/humming-bird/"

[tool.setuptools.packages.find]
include = ["pield*"]
